XW-1690 | fixes bleeding search suggestions shadow on iPad Safari

--- a/components/_global-navigation.scss
+++ b/components/_global-navigation.scss
@@ -199,6 +199,8 @@ $notification-counter-size: 18px;
 
 	&__search-close {
 		display: none;
+		// iPad Safari fix for bleeding search suggestions shadow
+		margin: 0;
 		padding: 3px;
 		z-index: 2;
 	}
